# liblogging

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Jamroot  Makefile  README.rst  build-config.jam  fhs.jam  liblogging.doxyfile  multiarch.jam  readme.rst
cmake/: AddSubmodule.cmake
include/logging/: logging.hpp  ostream.hpp
include/logging/detail/: fileno.hpp
src/logging/: logging.cpp  operations.cpp
src/logging/detail/: fileno.cpp
test/: test1.cpp
